--- a/WebApplication1/nbproject/private/private.properties
+++ b/WebApplication1/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Voja\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat70.properties
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat70:home=C:\\xampp\\tomcat
+j2ee.server.home=C:/XAAAAmp/tomcat
+j2ee.server.instance=tomcat70:home=C:\\XAAAAmp\\tomcat
 selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\Voja\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
